src/styles/global.css
header {
  a[target="_blank"] {
    &::after {
      @apply inline-block w-3 h-3 ml-1 relative;
      content: "";
      top: 1px;
      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25' /%3E%3C/svg%3E");
    }
  }
}

footer {
  ul a[target="_blank"] {
    &::after {
      content: "";
      @apply inline-block w-3 h-3 ml-1 relative opacity-25 top-px;
      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25' /%3E%3C/svg%3E");
    }
  }
}

@media (prefers-color-scheme: dark) {
  header {
    a[target="_blank"] {
      &::after {
        filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg)
          brightness(119%) contrast(119%);
      }
    }
  }

  footer {
    ul a[target="_blank"] {
      &::after {
        opacity: 1;
        filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg)
          brightness(119%) contrast(119%);
      }
    }
  }
}

/* Alt text styling for a not-yet-loaded image */
img {
  @apply font-mono text-sm text-gray-500;
}

.footnotes {
  @apply border-t mt-24 pt-4 text-base;
}

.video-container {
  @apply relative overflow-hidden w-full;

  &::after {
    @apply block;
    content: "";
    padding-top: 56.25%;
  }

  iframe {
    @apply absolute top-0 left-0 w-full h-full;
  }
}

